Swarun: Changed website

--- a/bfree.html
+++ b/bfree.html
@@ -131,28 +131,34 @@
 							<div class="row">
 
 
-
-<div class="12u"><section>
-
-<strong>Project: Towards Battery-Free Wireless Communication and Sensing</h4> </strong>
+<div class="6u 12u(mobile)"> <section>
+<strong>Project: Towards Battery-Free Wireless Communication and Sensing</h4> </strong><br /><br />
 
 <table>
 <tr>
 <td>
 <div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/bfree.png" style="width:320px;height:210px"/>
+<img src="images/bfree.png" style="width:100%; height:350px;"/>
 </div>
 </td>
+</tr><tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 This project aims to ask: Can we connect to battery-free devices over extremely long distances? We develop the state-of-the-art longest range connectivity solution for completely battery-free commercial RFID tags, by exploiting collaboration between many distributed RFID readers. We explore several opportunities that such a system can produce. Imagine being able to track the location of every object around you over extended distances, by simply attaching a battery-free sticker. The WiTech lab's research has developed solutions for smart infrastructure monitoring, gesture-based interfaces and on-body sensing using battery-free networks. </td>
 </tr>
 </table>
 <br />
+</section><section>
 <strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px" width="560" height="315" src="https://www.youtube.com/embed/1Z1DbU8kDak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br />
+    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/1Z1DbU8kDak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br /> <br /></section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
+
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
 <li><strong>RFID Tattoo: A Wireless Platform for Speech Recognition </strong>, Jingxian Wang, Chengfeng Pan, Haojian Jin, Vaibhav Singh, Yash Jain, Jason Hong, Carmel Majidi and Swarun Kumar, UbiComp  2020 [<a href="papers/rftattoo-ubicomp2020.pdf">PAPER</a>] [<a href="rftattoo.html">WEBSITE</a>]<br /></li>
@@ -163,6 +169,11 @@ This project aims to ask: Can we connect to battery-free devices over extremely 
 <li><strong>Towards Wearable Everyday Body-Frame Tracking </strong>, Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, UbiComp  2018 <em>(Best Demo Honorable Mention)</em> [<a href="papers/rfwear-ubicomp2018.pdf">PAPER</a>] [<a href="slides/rfwear-ubicomp2018.pdf">SLIDES</a>] [<a href="rfwear.html">WEBSITE</a>]<br /></li>
 </ul>
 
+</section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
+
 <strong style="margin-left:0px">Project Participants</h4> </strong><br />
 
 
@@ -172,7 +183,6 @@ This project aims to ask: Can we connect to battery-free devices over extremely 
 Jinxian Wang, Haojian Jin and Junbo Zhang</li>
 <li> <strong> Collaborators: </strong> Prof. Jason Hong, Prof. Carmel Majidi and Prof. Chris Harrison</li></ul>
 
-<br /> <br />
 
 </div>
 
