--- a/carspeak.html
+++ b/carspeak.html
@@ -132,26 +132,33 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project CarSpeak:  A Content-Centric Network for Autonomous Driving</h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project CarSpeak:  A Content-Centric Network for Autonomous Driving</h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/carspeak.png" style="width:300px"/>
+<img src="images/carspeak.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
  Self-driving cars are widely seen as the future of the automotive industry. Yet, safety remains a challenge; sensors on autonomous cars cannot look around corners. Communication between cars is a natural, but challenging solution given that vehicular sensors generate Gb/s of data. CarSpeak addresses this challenge with a novel communication system; it adopts a "content-centric" approach where regions of the road sensed in the environment are first class citizens. CarSpeak improves collision avoidance in a real autonomous car testbed. 
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px">Video</h4></strong> 
-    <iframe style="margin-top: 10px"  width="560" height="315" src="https://www.youtube.com/embed/swB1PkNTBQY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br />
-<br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/swB1PkNTBQY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>CarSpeak: A Content-Centric Network for Autonomous Driving</strong>, Swarun Kumar, Lixin Shi, Stephanie Gil, Nabeel Ahmed, Dina Katabi, and Daniela Rus, ACM SIGCOMM  2012 [<a href="papers/carspeak-sigcomm2012.pdf">PAPER</a>] [<a href="slides/carspeak-sigcomm2012.pptx">SLIDES</a>]<br />
 </li>
