--- a/charm.html
+++ b/charm.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project Charm:  Exploiting Geographical Diversity Through Coherent Combining in Low-Power Wide-Area Networks </h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project Charm:  Exploiting Geographical Diversity Through Coherent Combining in Low-Power Wide-Area Networks </h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/charm.png" style="width:300px"/>
+<img src="images/charm.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 A key insight in achieving better connectivity for LP-WAN clients is the base station - client dichotomy in LP-WANs where the base stations will over-provision clients and have significantly higher bandwidth and compute resources.  Charm exploits the geographical diversity of LP-WAN base stations, to coherently combine signals in the cloud. It performs detection of the packets at the edge and combines the information in the cloud to decode them. This enables the clients to send data at much lower power levels and at a much faster speed. Charm extends the battery life of these LP-WAN clients by 4x with an overall increase in coverage area by 10x.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Charm: Exploiting Geographical Diversity Through Coherent Combining in Low-Power Wide-Area Networks </strong>, Adwait Dongare, Revathy Narayanan, Akshay Gadre, Artur Balanuta, Anh Luong, Swarun Kumar, Bob Iannucci, Anthony Rowe, IPSN  2018 <em>(Best Paper Award)</em> [<a href="papers/charm-ipsn2018.pdf">PAPER</a>]<br />
 </li>
