--- a/chime.html
+++ b/chime.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project Chime: Frequency Configuration for Low-Power Wide-Area Networks in a Heartbeat</h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project Chime: Frequency Configuration for Low-Power Wide-Area Networks in a Heartbeat</h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/chime.png" style="width:300px"/>
+<img src="images/chime.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Frequency configuration for LP-WANs can lead to severe impact on their performance due to the impact of multipath. Chime focuses on attempting to disentangle this complex web of multipath to understand the behavior of wireless signals in urban environments. In Chime, we show how we can disentangle this complex multipath and estimate the optimum frequency-of-operation which improves the quality of all LP-WAN clients within range and synergizes when used complimentary to Charm.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Frequency Configuration for Low-Power Wide-Area Networks in a Heartbeat</strong>,  Akshay Gadre, Revathy Narayanan, Anh Luong, Swarun Kumar, Anthony Rowe and Bob Iannucci, NSDI 2020 [<a href="papers/chime-nsdi2020.pdf">PAPER</a>]<br />
 </li>
