--- a/choir.html
+++ b/choir.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project Choir: Empowering Low-Power Wide Area Networks in Urban Settings </h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project Choir: Empowering Low-Power Wide Area Networks in Urban Settings </h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/choir.png" style="width:300px"/>
+<img src="images/choir.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 As Internet-of-things scales, we see LPWANs (Low-Power Wide Area Networks) emerge as promising candidate to enable communication for sensor nodes. However, the threat of colliding transmissions limits the efficacy of these cheap, power-limited, wake-and-transmit nodes. In ChOIR, we explore the opportunities provided by the cheap clocks aboard these nodes to disentangle colliding transmissions for increased throughput and range.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Empowering Low-Power Wide Area Networks in Urban Settings </strong>, Rashad Eletreby, Diana Zhang, Swarun Kumar, and Osman Yagan, SIGCOMM  2017 [<a href="papers/choir-sigcomm2017.pdf">PAPER</a>] [<a href="slides/choir-sigcomm2017.pdf">SLIDES</a>]<br />
 </li>
