--- a/dliot.html
+++ b/dliot.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project DLIoT: A Deep Learning Approach to IoT Authentication </h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project DLIoT: A Deep Learning Approach to IoT Authentication </h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/dliot.png" style="width:300px"/>
+<img src="images/dliot.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Since low-power IoT client devices are low-power, we need to offload the compute-heavy operations, such as authentication, to the much powerful base stations. Most of these IoT devices are cheap which means that the manufacturing processes create various hardware impairments in them. We attempt to analyze the wireless signals at the cloud to infer the effect of these impairments on them. However, these imperfections can affect the signal in different ways and cannot be discerned a priori. Our solution uses a deep neural network to learn these wireless hardware imperfections and achieves a promising accuracy 98.6% in authenticating legitimate client devices from high power adversaries with zero false positives.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>A Deep Learning Approach to IoT Authentication </strong>, Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC  2018 [<a href="papers/dliot-icc2018.pdf">PAPER</a>]<br />
 </li>
