--- a/intuwition.html
+++ b/intuwition.html
@@ -132,29 +132,37 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project IntuWition: On the Feasibility of Wi-Fi Based Material Sensing </h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project IntuWition: On the Feasibility of Wi-Fi Based Material Sensing </h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/intuwition.png" style="width:300px"/>
+<img src="images/intuwition.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Drones are entering increasingly dense environments for applications such as delivery in urban settings, inventory management in warehouses, and rescue in disaster sites. In these environments, there is need for material-specific drone responses, such as swerving to fly above another drone but avoiding a human more slowly and from farther away. IntuWition explores Wi-Fi polarimetry as a sensing paradigm to complement existing on-board sensors for materials sensing of both visible and occluded obstacles.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px">Video</h4></strong> 
-    <iframe style="margin-top: 10px"  width="560" height="315" src="https://www.youtube.com/embed/05Ob8-pVwww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br />
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/05Ob8-pVwww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section>
 <strong><h4 style="margin-left:0px">Code</h4></strong>
     The code for IntuWition is available at: [<a href="https://github.com/d95zhang/IntuWition">LINK</a>]
-<br /> <br />
-<br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+
+</section><section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>]<br />
 </li>
