--- a/lpwan.html
+++ b/lpwan.html
@@ -131,25 +131,30 @@
 							<div class="row">
 
 
-
-<div class="12u"><section>
-
-<strong>Project: Pushing the Limits of Low-Power Wide-Area Networks</h4> </strong>
+<div class="6u 12u(mobile)"> <section>
+<strong>Project: Pushing the Limits of Low-Power Wide-Area Networks</h4> </strong><br /><br />
 
 <table>
 <tr>
 <td>
 <div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/lpwan.png" style="width:320px;height:210px"/>
+<img src="images/lpwan.png" style="width:100%; height:350px;"/>
 </div>
 </td>
+</tr><tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Low-Power Wide-Area Networks (LP-WANs) aim to provide wireless connectivity at extremely low data rates (kbps) over distances of several miles to devices powered by a 10-year battery. Recent years have witnessed several efforts in this space such as LoRa, SIGFOX and NB-IoT. However, today's LP-WANs struggle to cope with the scale of future IoT deployments and the significant signal attenuation posed by urban environments. The WiTech lab group's research has developed new solutions for allowing LP-WANs to scale more efficiently, achieve even longer range in urban settings and save battery life. </td>
 </tr>
 </table>
 <br />
+</section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
@@ -160,6 +165,11 @@ Low-Power Wide-Area Networks (LP-WANs) aim to provide wireless connectivity at e
 <li><strong>Empowering Low-Power Wide Area Networks in Urban Settings </strong>, Rashad Eletreby, Diana Zhang, Swarun Kumar, and Osman Yagan, SIGCOMM  2017 [<a href="papers/choir-sigcomm2017.pdf">PAPER</a>] [<a href="slides/choir-sigcomm2017.pdf">SLIDES</a>] [<a href="choir.html">WEBSITE</a>]<br /></li>
 </ul>
 
+</section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
+
 <strong style="margin-left:0px">Project Participants</h4> </strong><br />
 
 
@@ -169,7 +179,6 @@ Low-Power Wide-Area Networks (LP-WANs) aim to provide wireless connectivity at e
 Akshay Gadre, Atul Bansal, Adwait Dongare and Artur Balanuta</li>
 <li> <strong> Collaborators: </strong> Prof. Anthony Rowe, Prof. Osman Yagan and Prof. Bob Iannucci</li></ul>
 
-<br /> <br />
 
 </div>
 
