--- a/lteye.html
+++ b/lteye.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project LTEye: LTE Radio Analytics Made Easy and Accessible</h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project LTEye: LTE Radio Analytics Made Easy and Accessible</h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/lteye.png" style="width:300px"/>
+<img src="images/lteye.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 LTE is a big part of our lives. Yet, its inner workings remain largely opaque to us. LTEye is the first open platform to throw light into the LTE radio layer, without operator support. It discovers the locations of users in the network as well as their service quality. This enables businesses and end-users to visualize user performance in their floorspace and diagnose problems with repeaters or femto cells. LTEye also found deficiencies in production AT&T and Verizon networks, including unprecedented inter-cell interference and inefficient usage of expensive licensed spectrum.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>LTE Radio Analytics Made Easy and Accessible</strong>, Ezzeldin Hamed, Dina Katabi, and Li Erran Li, ACM SIGCOMM  2014 [<a href="papers/lteye-sigcomm2014.pdf">PAPER</a>]<br />
 </li>
