--- a/openrf.html
+++ b/openrf.html
@@ -132,26 +132,33 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project OpenRF: Bringing Cross-Layer MIMO to Today's Wireless LANs</h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project OpenRF: Bringing Cross-Layer MIMO to Today's Wireless LANs</h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/openrf.png" style="width:300px"/>
+<img src="images/openrf.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Recent cross-layer MIMO systems have promised significant throughput gains. Yet, these have been demonstrated on software radios as they are considered incompatible with existing Wi-Fi radios and protocols. OpenRF breaks this assumption; it is the first system to show cross-layer MIMO on today's Wi-Fi devices and real applications. OpenRF proposes new formulations of interference alignment, nulling and beamforming designed for 802.11's MAC and PHY. OpenRF has a software defined networking design for self-configurability. OpenRF shows reduced delays and stalls for video applications. 
 </td>
 </tr>
-</table><strong><h4 style="margin-left:0px">Code</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section>
+<strong><h4 style="margin-left:0px">Code</h4></strong>
     The code for OpenRF is available at: [<a href="https://www.andrew.cmu.edu/user/swarunk/new/openrfcode.html">LINK</a>]
-<br /> <br />
-<br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+
+</section><section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Bringing Cross-Layer MIMO to Today's Wireless LANs</strong>, Swarun Kumar, Diego Cifuentes, Shyamnath Gollakota, and Dina Katabi, ACM SIGCOMM  2013 [<a href="papers/openrf-sigcomm2013.pdf">PAPER</a>] [<a href="slides/openrf-sigcomm2013.pptx">SLIDES</a>]<br />
 </li>
