--- a/research.html
+++ b/research.html
@@ -134,7 +134,6 @@
 
 <div class="12u"><section>
 
-
 <strong><h4>RESEARCH PROJECTS</h4></strong><br />
 <div>
 The WiTech lab's research is in the area of computer networks with a
@@ -147,14 +146,19 @@ Internet and provide novel services as a result. Our research has made
 three broad contributions: <br />
 </div><br />
 
-<strong><h4 style="font-size:17px">Connecting the Internet of Things</h4></strong>
+</section>
+</div>
+
+<div class="4u 12u(mobile)"> <section> <strong><h4
+style="font-size:17px">Connecting the Internet of Things</h4></strong>
 <div> Imagine if every object that surrounds you is wirelessly
-connected. Our research explores: what would such a network look like?
-Specifically, we need systems that scale to a large number of
-connected devices, are self-configurable and secure. Most importantly,
-their battery needs to last for years, or perhaps they must operate
-with no battery at all. Our research explores both these
-alternatives: </div>
+connected. Your clothes could track your posture and health, while
+your appliances automatically know when they need repair. Our research
+explores: what would such a network look like?  Specifically, we need
+systems that scale to a large number of connected devices, are
+self-configurable and secure. Most importantly, their battery needs to
+last for years, or perhaps they must operate with no battery at
+all. Our research explores both these alternatives:<br /><br /> </div>
 
 <center>
 <table>
@@ -163,16 +167,21 @@ alternatives: </div>
 <center>
 <strong><a href="lpwan.html" style="text-decoration:none">Low-Power Wide-Area Networks</a></strong> <br /></center>
 <div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
-<a href="lpwan.html" style="text-decoration:none"><img src="images/lpwan.png" style="width:320px;height:190px"/></a>
+<a href="lpwan.html" style="text-decoration:none"><img src="images/lpwan.png" style="width:100%;height:190px"/></a>
 </div>
 </td>
-<td style="width:10px">
+</tr>
+<tr>
+<td style="height:10px;width:10px">
+<br />
 </td>
+</tr>
+<tr>
 <td>
 <center>
 <strong><a href="bfree.html" style="text-decoration:none">Battery-Free Internet of Things</a></strong> <br /> </center>
 <div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
-<a href="bfree.html" style="text-decoration:none"><img src="images/bfree.png" style="width:320px;height:190px"/></a>
+<a href="bfree.html" style="text-decoration:none"><img src="images/bfree.png" style="width:100%;height:190px"/></a>
 </div>
 </td>
 </tr>
@@ -180,6 +189,12 @@ alternatives: </div>
 </center>
 
 <br />
+
+</section>
+</div>
+
+<div class="4u 12u(mobile)">
+<section>
 
 <strong><h4 style="font-size:17px">Next-Generation Wireless Connectivity</h4></strong>
 <div> What would be the wireless technologies that connects
@@ -189,7 +204,7 @@ with many wireless devices sharing the same spectrum?  Our research
 explores next-generation wireless technologies to mitigate
 interference in wireless LANs and better configure cellular networks
 of today, as well as emerging technologies of the future such as
-mm-wave. Our work spans both Wi-Fi and cellular networks beyond 5-G. </div>
+mm-wave. Our work spans both Wi-Fi and cellular networks beyond 5-G. <br /> <br /></div>
 
 <center>
 <table>
@@ -198,16 +213,21 @@ mm-wave. Our work spans both Wi-Fi and cellular networks beyond 5-G. </div>
 <center>
 <strong><a href="wifi.html" style="text-decoration:none">Future Wi-Fi and Freedom from Interference</a></strong> <br /></center>
 <div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
-<a href="wifi.html" style="text-decoration:none"><img src="images/wifi.png" style="width:320px;height:190px"/></a>
+<a href="wifi.html" style="text-decoration:none"><img src="images/wifi.png" style="width:100%;height:190px"/></a>
 </div>
 </td>
-<td style="width:10px">
+</tr>
+<tr>
+<td style="height:10px;width:10px">
+<br />
 </td>
+</tr>
+<tr>
 <td>
 <center>
 <strong><a href="xg.html" style="text-decoration:none">mm-Wave and Beyond 5-G</a></strong> <br /> </center>
 <div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
-<a href="xg.html" style="text-decoration:none"><img src="images/xg.png" style="width:320px;height:190px"/></a>
+<a href="xg.html" style="text-decoration:none"><img src="images/xg.png" style="width:100%;height:190px"/></a>
 </div>
 </td>
 </tr>
@@ -215,6 +235,12 @@ mm-wave. Our work spans both Wi-Fi and cellular networks beyond 5-G. </div>
 </center>
 
 <br />
+
+</section>
+</div>
+
+<div class="4u 12u(mobile)">
+<section>
 
 <strong><h4 style="font-size:17px">Novel Wireless Services</h4></strong>
 <div>Our research explores novel services that are enabled by
@@ -224,7 +250,7 @@ re-used as a sensing mechanism. For instance, can wireless radios help
 us track our location, even if we are indoors, where GPS fails? Can
 wireless signals help us track our own body and sense the environment
 around us? Our research also studies the security and privacy
-implications of such future wireless networks and services.
+implications of such future wireless networks and services.<br /><br />
  </div>
 
 <center>
@@ -234,16 +260,21 @@ implications of such future wireless networks and services.
 <center>
 <strong><a href="sensing.html" style="text-decoration:none">Wireless Localization and Sensing</a></strong> <br /></center>
 <div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
-<a href="sensing.html" style="text-decoration:none"><img src="images/sensing.png" style="width:320px;height:190px"/></a>
+<a href="sensing.html" style="text-decoration:none"><img src="images/sensing.png" style="width:100%;height:190px"/></a>
 </div>
 </td>
-<td style="width:10px">
+</tr>
+<tr>
+<td style="height:10px;width:10px">
+<br />
 </td>
+</tr>
+<tr>
 <td>
 <center>
 <strong><a href="security.html" style="text-decoration:none">Wireless Security and Privacy</a></strong> <br /> </center>
 <div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
-<a href="security.html" style="text-decoration:none"><img src="images/security.png" style="width:320px;height:190px"/></a>
+<a href="security.html" style="text-decoration:none"><img src="images/security.png" style="width:100%;height:190px"/></a>
 </div>
 </td>
 </tr>
@@ -251,8 +282,9 @@ implications of such future wireless networks and services.
 </center>
 
 
-<br /><br />
+<br />
 </div>
+
 
 										</section>
 
