--- a/sdc.html
+++ b/sdc.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project SDC: Software Defined Cooking using a Microwave Oven </h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project SDC: Software Defined Cooking using a Microwave Oven </h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/sdc.png" style="width:300px"/>
+<img src="images/sdc.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Despite widespread popularity, today's microwave ovens are limited in their cooking capabilities, given that they heat food blindly, resulting in a non-uniform and unpredictable heating distribution. We present SDC (software-defined cooking), a low-cost closed-loop microwave oven system that aims to heat the food in a software-defined thermal trajectory.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Software Defined Cooking using a Microwave Oven </strong>, Haojian Jin, Jingxian Wang, Swarun Kumar and Jason Hong, MobiCom  2019 <em>(ACM GetMobile Research Hightlight)</em> [<a href="papers/sdc-mobicom2019.pdf">PAPER</a>] [<a href="slides/sdc-mobicom2019.pdf">SLIDES</a>]<br />
 </li>
