--- a/security.html
+++ b/security.html
@@ -131,31 +131,41 @@
 							<div class="row">
 
 
-
-<div class="12u"><section>
-
-<strong>Project: Security and Privacy for Wireless Networks</h4> </strong>
+<div class="6u 12u(mobile)"> <section>
+<strong>Project: Security and Privacy for Wireless Networks</h4> </strong><br /><br />
 
 <table>
 <tr>
 <td>
 <div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/security.png" style="width:320px;height:210px"/>
+<img src="images/security.png" style="width:100%; height:350px;"/>
 </div>
 </td>
+</tr><tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 This project aims to study the security and privacy challenges associated with next-generation wireless networks. We study the unique security challenges imposed by the Internet of Things, where wireless devices have significantly lower power, compute and communication bandwidth compared to high-power adversaries. We develop a deep learning based wireless authentication solution that uses the imperfections of wireless radios to our advantage in uniquely identifying them. We also develop a suite of solutions in ensuring threat and anomaly detection in the presence of high-mobility wireless radios, such as in robotic swarms. </td>
 </tr>
 </table>
 <br />
+</section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
 <li><strong>A Deep Learning Approach to IoT Authentication </strong>, Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC  2018 [<a href="papers/dliot-icc2018.pdf">PAPER</a>] [<a href="dliot.html">WEBSITE</a>]<br /></li>
 <li><strong>Guaranteeing Spoof-Resilient Multi-Robot Networks</strong>, Stephanie Gil (Co-primary), Swarun Kumar (Co-primary), Mark Mazumder, Dina Katabi and Daniela Rus, RSS  2015<br /></li>
 </ul>
+
+</section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
 
 <strong style="margin-left:0px">Project Participants</h4> </strong><br />
 
@@ -166,7 +176,6 @@ This project aims to study the security and privacy challenges associated with n
 Junbo Zhang, Haojian Jin and Akshay Gadre</li>
 <li> <strong> Collaborators: </strong> Prof. Soummya Kar, Prof. Osman Ya&gbreve;an and Prof. Jos&eacute;  Moura</li></ul>
 
-<br /> <br />
 
 </div>
 
