--- a/sensing.html
+++ b/sensing.html
@@ -131,28 +131,34 @@
 							<div class="row">
 
 
-
-<div class="12u"><section>
-
-<strong>Project: Wireless Sensing</h4> </strong>
+<div class="6u 12u(mobile)"> <section>
+<strong>Project: Wireless Sensing</h4> </strong><br /><br />
 
 <table>
 <tr>
 <td>
 <div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/sensing.png" style="width:320px;height:210px"/>
+<img src="images/sensing.png" style="width:100%; height:350px;"/>
 </div>
 </td>
+</tr><tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 This project aims to re-use existing wireless communication radios as <i>sensors</i>. We develop solutions to use Wi-Fi radios as material scanners that can quickly scan the environment for the presence of humans, even if they are hidden (e.g. under rubble). We also developed novel gesture based interfaces that transform ordinary surfaces, such as our clothes, into shape-aware objects that can detect our gestures and postures. The WiTech lab has developed rich literature advancing state-of-the-art wireless localization, to track objects at sub-meter accuracy indoors, where GPS does not operate.  </td>
 </tr>
 </table>
 <br />
+</section><section>
 <strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px" width="560" height="315" src="https://www.youtube.com/embed/05Ob8-pVwww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br />
+    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/05Ob8-pVwww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br /> <br /></section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
+
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
 <li><strong>Software Defined Cooking using a Microwave Oven </strong>, Haojian Jin, Jingxian Wang, Swarun Kumar and Jason Hong, MobiCom  2019 <em>(ACM GetMobile Research Hightlight)</em> [<a href="papers/sdc-mobicom2019.pdf">PAPER</a>] [<a href="slides/sdc-mobicom2019.pdf">SLIDES</a>] [<a href="sdc.html">WEBSITE</a>]<br /></li>
@@ -161,6 +167,11 @@ This project aims to re-use existing wireless communication radios as <i>sensors
 <li><strong>LTE Radio Analytics Made Easy and Accessible</strong>, Ezzeldin Hamed, Dina Katabi, and Li Erran Li, ACM SIGCOMM  2014 [<a href="papers/lteye-sigcomm2014.pdf">PAPER</a>] [<a href="lteye.html">WEBSITE</a>]<br /></li>
 <li><strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>] [<a href="intuwition.html">WEBSITE</a>]<br /></li>
 </ul>
+
+</section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
 
 <strong style="margin-left:0px">Project Participants</h4> </strong><br />
 
@@ -171,7 +182,6 @@ This project aims to re-use existing wireless communication radios as <i>sensors
 Diana Zhang, Haojian Jin and Junbo Zhang</li>
 <li> <strong> Collaborators: </strong> Prof. Stephanie Gil and Prof. Dina Katabi</li></ul>
 
-<br /> <br />
 
 </div>
 
