--- a/ubicarse.html
+++ b/ubicarse.html
@@ -132,26 +132,33 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project Ubicarse: Accurate Indoor Localization with Zero Startup Cost</h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project Ubicarse: Accurate Indoor Localization with Zero Startup Cost</h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/ubicarse.png" style="width:300px"/>
+<img src="images/ubicarse.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Despite extensive research over the past decade, indoor positioning has yet to gain widespread adoption. The main impediment is the enormous deployment effort; past systems either require new infrastructure, or extensive fingerprinting of the environment. Ubiety is an indoor positioning that requires neither; it is a standalone software that runs solely on a mobile device, yet achieves tens of cm accuracy. At Ubiety's core is a novel algorithm that intelligently maps wireless signals by a simple twist of a mobile device.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px">Video</h4></strong> 
-    <iframe style="margin-top: 10px"  width="560" height="315" src="https://www.youtube.com/embed/dd-OlHwBDbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br />
-<br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/dd-OlHwBDbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Accurate Indoor Localization with Zero Startup Cost</strong>, Swarun Kumar, Stephanie Gil, Dina Katabi and Daniela Rus, ACM MOBICOM  2014 <em>(Best Presentation Runner-up)</em> [<a href="papers/ubicarse-mobicom2014.pdf">PAPER</a>]<br />
 </li>
