--- a/wifi.html
+++ b/wifi.html
@@ -131,28 +131,34 @@
 							<div class="row">
 
 
-
-<div class="12u"><section>
-
-<strong>Project: Towards Interference-Free Wireless LANs</h4> </strong>
+<div class="6u 12u(mobile)"> <section>
+<strong>Project: Towards Interference-Free Wireless LANs</h4> </strong><br /><br />
 
 <table>
 <tr>
 <td>
 <div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/wifi.png" style="width:320px;height:210px"/>
+<img src="images/wifi.png" style="width:100%; height:350px;"/>
 </div>
 </td>
+</tr><tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 This project aims to address one of the most challenging problems with existing Wi-Fi networks: wireless interference. Wireless spectrum is shared, which is why when a large number of users simultaneously access the medium, their individual communication speeds slows down accordingly. Our research explores new ways to reduce or even eliminate this interference. We develop both solutions to completely redesign wireless infrastructure or make simple software upgrades to existing Wi-Fi infrastructure. The WiTech lab's research has also explored new ways to sense the environment using existing commodity wireless LANs. </td>
 </tr>
 </table>
 <br />
+</section><section>
 <strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px" width="560" height="315" src="https://www.youtube.com/embed/05Ob8-pVwww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br />
+    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/05Ob8-pVwww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br /> <br /></section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
+
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
 <li><strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus, International Symposium on Robotics Research (ISRR)  2013 [<a href="wiseek.html">WEBSITE</a>]<br /></li>
@@ -163,6 +169,11 @@ This project aims to address one of the most challenging problems with existing 
 <li><strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>] [<a href="intuwition.html">WEBSITE</a>]<br /></li>
 </ul>
 
+</section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
+
 <strong style="margin-left:0px">Project Participants</h4> </strong><br />
 
 
@@ -172,7 +183,6 @@ This project aims to address one of the most challenging problems with existing 
 Diana Zhang and Jingxian Wang</li>
 <li> <strong> Collaborators: </strong> Prof. Dina Katabi</li></ul>
 
-<br /> <br />
 
 </div>
 
