--- a/wiseek.html
+++ b/wiseek.html
@@ -132,26 +132,33 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project WiSeek: Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project WiSeek: Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/wiseek.png" style="width:300px"/>
+<img src="images/wiseek.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Amazon and Google are piloting delivery drones to transport packages to customers in a cost-efficient way. Unfortunately, today's navigation sensors are too bulky and expensive to be mounted on cheap, light-weight robotic platforms. WiSeek is provides a novel alternative; an algorithm to navigate robots with commodity Wi-Fi cards by following the wireless signals of their clients. WiSeek can sense how radio signals bend around corners, to avoid obstacles in the way, solving a crucial problem in robotics.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px">Video</h4></strong> 
-    <iframe style="margin-top: 10px"  width="560" height="315" src="https://www.youtube.com/embed/k4Fg3RZUy2A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br />
-<br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/k4Fg3RZUy2A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus, International Symposium on Robotics Research (ISRR)  2013<br />
 </li>
