--- a/xg.html
+++ b/xg.html
@@ -131,25 +131,30 @@
 							<div class="row">
 
 
-
-<div class="12u"><section>
-
-<strong>Project: Defining Next-Generation High-Speed Wireless</h4> </strong>
+<div class="6u 12u(mobile)"> <section>
+<strong>Project: Defining Next-Generation High-Speed Wireless</h4> </strong><br /><br />
 
 <table>
 <tr>
 <td>
 <div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/xg.png" style="width:320px;height:210px"/>
+<img src="images/xg.png" style="width:100%; height:350px;"/>
 </div>
 </td>
+</tr><tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 This project aims to devise next-generation wireless networks that achieve faster throughput and low latency. We both aim to study and re-design existing cellular infrastructure and develop new clean slate solutions. We developed solutions that learned critical problems in existing AT&amp;T and Verizon wireless networks. We also developed a best paper award-winning solution to more effectively predict performance at cellphones purely from the cellular towers, without draining the phones' battery. We also explore new networking technologies for high-speed wireless beyond 5-G: a robust and reliable mm-wave solution. </td>
 </tr>
 </table>
 <br />
+</section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
@@ -158,6 +163,11 @@ This project aims to devise next-generation wireless networks that achieve faste
 <li><strong>piStream: Physical Layer Informed Adaptive Video Streaming Over LTE</strong>, Xiufeng Xie, Xinyu Zhang, Swarun Kumar, and Li Erran Li, MobiCom  2015 <em>(ACM GetMobile Research Hightlight)</em><br /></li>
 <li><strong>LTE Radio Analytics Made Easy and Accessible</strong>, Ezzeldin Hamed, Dina Katabi, and Li Erran Li, ACM SIGCOMM  2014 [<a href="papers/lteye-sigcomm2014.pdf">PAPER</a>] [<a href="lteye.html">WEBSITE</a>]<br /></li>
 </ul>
+
+</section>
+</div>
+<div class="6u 12u(mobile)">
+<section>
 
 <strong style="margin-left:0px">Project Participants</h4> </strong><br />
 
@@ -168,7 +178,6 @@ This project aims to devise next-generation wireless networks that achieve faste
 Vaibhav Singh, Akshay Gadre and Akarsh Prabhakara</li>
 <li> <strong> Collaborators: </strong> Prof. Rick Carley, Prof. Anthong Rowe and Prof. Jeyanandh Paramesh</li></ul>
 
-<br /> <br />
 
 </div>
 
