--- a/index.html
+++ b/index.html
@@ -144,9 +144,27 @@
 											<p>
 												The WiTech Lab seeks to develop and apply nascent wireless technologies, both passive and active, to improve daily life.
 											</p>
+
+											<iframe style="position: relative; width: 100%;" src="https://www.youtube.com/embed/LVpX-6VJ69Y" frameborder="0" allowfullscreen></iframe>
+										</section>
+
+
+									<!-- Box #1 -->
+										<section>
+											<header>
+												<h2>Latest Videos</h2>
+												<!-- <h3>A subheading about who we are</h3> -->
+											</header>
+											<!-- <a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a> -->
+											<p>
+												<iframe style="position: relative; width: 100%;" src="https://www.youtube.com/embed/?listType=playlist&list=PLo2zzq5KtVpBmXlvwYPXaI-mfKFKYgoC0" frameborder="0" allowfullscreen></iframe>
+
+											</p>
 										</section>
 
 								</div>
+
+
 								<div class="4u 12u(mobile)">
 
 									<!-- Box #2 -->
@@ -167,12 +185,14 @@
 <li> (08/19) Check out our papers on software-defined cooking and material sensing at MobiCom 2019</li>
 
 												<li>(02/19) <a href = "pushid.html"> PushID </a> presented at NSDI '19. </li>
+
+<!-- 
 												<li>(11/18) <a href = "GalioT.html"> GalioT </a> being presented at Hotnets '18. </li>
 												<li>(07/18) Check our <a href = "fabrics/fabrics.html"> smart fabrics </a>projects! </li>
 												<li>(01/18) Our project on Low-Power Wide-Area Networking (Charm) was accepted at IPSN 2018. </li>
 												<li>(01/18) Our project on Deep Learning for IoT Authentication was accepted at ICC 2018. </li>
 												<li>(09/17) Our project on wearable battery-free body-frame tracking was accepted at IMWUT 2017 (Ubicomp). </li>
-												<li>(05/17) Our <a href = "LoRa/ChOIR.html"> project on LoRa scaling in dense environments has been accepted to SigComm '17.</li> </a>
+												<li>(05/17) Our <a href = "LoRa/ChOIR.html"> project on LoRa scaling in dense environments has been accepted to SigComm '17.</li> </a> -->
 											</ul>
 										</section>
 								</div>
@@ -185,6 +205,25 @@
 												<!-- <h3>And a final subheading about our clients</h3> -->
 											</header>
 											Our lab is located on the 4th floor of the Collaborative Innovation Center on the CMU campus. Professor Swarun Kumar, the PI, has his contact information listed <a href = "https://www.andrew.cmu.edu/user/swarunk/index.html"> here</a>.
+</div>
+
+
+
+								<div class="4u 12u(mobile)">
+
+									<!-- Box #1 -->
+										<section>
+											<header>
+												<h2>Twitter Feed</h2>
+												<!-- <h3>A subheading about who we are</h3> -->
+											</header>
+											<!-- <a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a> -->
+											<p>
+												<a class="twitter-timeline" href="https://twitter.com/WiTechLab?ref_src=twsrc%5Etfw">Tweets by WiTechLab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+											</p>
+
+
+
 
 
 										</section>
