--- a/megamimo.html
+++ b/megamimo.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project MegaMIMO:  Scaling Wireless Capacity with User Demands</h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project MegaMIMO:  Scaling Wireless Capacity with User Demands</h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/megamimo.png" style="width:300px"/>
+<img src="images/megamimo.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Wireless spectrum is a limited and shared resource, which means that the more users there are, the less each user gets. With the explosion of mobile devices, this fundamental limitation is causing a wireless capacity crunch. MegaMIMO alleviates this crunch: it guarantees each user the same chunk of resources, regardless of the number of users in the network. It presents a new algorithm that synchronizes multiple access points to emulate one large MIMO transmitter. MegaMIMO demonstrates a large 10x gain in network throughput with existing client devices.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>MegaMIMO: Scaling Wireless Capacity with User Demands</strong>, Hariharan Rahul, Swarun Kumar, and Dina Katabi, ACM SIGCOMM  2012 <em>(CACM Research Highlight)</em> [<a href="papers/megamimo-sigcomm2012.pdf">PAPER</a>]<br />
 </li>
