--- a/momimo.html
+++ b/momimo.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project MoMIMO: Interference Alignment by Motion</h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project MoMIMO: Interference Alignment by Motion</h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/momimo.png" style="width:300px"/>
+<img src="images/momimo.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Traditional interference management leverages multiple antennas (MIMO) to steer away interference. Yet, this excludes a wide range of small single-antenna devices: smartphones, wearables and sensors. MoMIMO brings techniques like interference alignment and nulling to single-antenna devices. Its key idea is to leverage mobility; it shows how to reduce interference significantly by intelligently sliding a Wi-Fi antenna by just an inch, achieving a 2x gain in throughput.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Interference Alignment by Motion</strong>, Fadel Adib (Co-primary), Swarun Kumar (Co-primary), Omid Aryan, Shyamnath Gollakota, and Dina Katabi, ACM MOBICOM  2013 [<a href="papers/momimo-mobicom2013.pdf">PAPER</a>] [<a href="slides/momimo-mobicom2013.pptx">SLIDES</a>]<br />
 </li>
