--- a/pushid.html
+++ b/pushid.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project PushID: Pushing the Range Limits of Commercial Passive RFIDs </h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project PushID: Pushing the Range Limits of Commercial Passive RFIDs </h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/pushid.png" style="width:300px"/>
+<img src="images/pushid.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Today's commercial passive RFIDs report ranges of 5-10 meters at best. This reveals blindspots where RFIDs remain undetected in warehouses, stores and factories today. We present PushID which achieves an 8x improvement in range over commercial RFID systems.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Pushing the Range Limits of Commercial Passive RFIDs </strong>, Jingxian Wang, Junbo Zhang, Rajarshi Saha, Haojian Jin, Swarun Kumar, NSDI  2019 [<a href="papers/pushid-nsdi2019.pdf">PAPER</a>]<br />
 </li>
