--- a/rftattoo.html
+++ b/rftattoo.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project RFTattoo:  A Wireless Platform for Speech Recognition </h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project RFTattoo:  A Wireless Platform for Speech Recognition </h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/rftattoo.png" style="width:300px"/>
+<img src="images/rftattoo.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 3 million people in the US are suffering voice impairments. Current solutions, like keyboard and electrolarynx, require extra effort for the patients to compensate for their voice disorders. We present RFTattoo an elegant speech recognition system for voice impaired using batteryless and flexible RFID tattoos. 
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>RFID Tattoo: A Wireless Platform for Speech Recognition </strong>, Jingxian Wang, Chengfeng Pan, Haojian Jin, Vaibhav Singh, Yash Jain, Jason Hong, Carmel Majidi and Swarun Kumar, UbiComp  2020 [<a href="papers/rftattoo-ubicomp2020.pdf">PAPER</a>]<br />
 </li>
