--- a/rfwear.html
+++ b/rfwear.html
@@ -132,26 +132,33 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project RFWear: Towards Wearable Everyday Body-Frame Tracking </h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project RFWear: Towards Wearable Everyday Body-Frame Tracking </h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/rfwear.png" style="width:300px"/>
+<img src="images/rfwear.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 RFWear is a first-of-its-kind body-frame tracking mechanism that is lightweight and convenient for day-to-day use, without relying on external infrastructure. RFWear processes wireless signals reflected off passive RFID tags to track movements of a user's body.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px">Video</h4></strong> 
-    <iframe style="margin-top: 10px"  width="560" height="315" src="https://www.youtube.com/embed/1Z1DbU8kDak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br />
-<br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/1Z1DbU8kDak" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Towards Wearable Everyday Body-Frame Tracking </strong>, Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, UbiComp  2018 <em>(Best Demo Honorable Mention)</em> [<a href="papers/rfwear-ubicomp2018.pdf">PAPER</a>] [<a href="slides/rfwear-ubicomp2018.pdf">SLIDES</a>]<br />
 </li>
