--- a/sozu.html
+++ b/sozu.html
@@ -132,26 +132,33 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project Sozu:  Self-Powered Radio Tags for Building-Scale Activity Sensing </h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project Sozu:  Self-Powered Radio Tags for Building-Scale Activity Sensing </h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/sozu.png" style="width:300px"/>
+<img src="images/sozu.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 Sozu is a low-cost sensing system that can detect a wide range of events wirelessly, through walls and without line of sight, at whole-building scale. Instead of using batteries, Sozu tags convert energy from activities that they sense into RF broadcasts, acting like miniature self-powered radio stations.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px">Video</h4></strong> 
-    <iframe style="margin-top: 10px"  width="560" height="315" src="https://www.youtube.com/embed/wbq-eOOIPyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br />
-<br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/wbq-eOOIPyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>Sozu: Self-Powered Radio Tags for Building-Scale Activity Sensing </strong>, Yang Zhang, Yasha Iravantchi, Haojian Jin, Swarun Kumar, and Chris Harrison, UIST  2019 [<a href="papers/sozu-uist2019.pdf">PAPER</a>]<br />
 </li>
