--- a/wish.html
+++ b/wish.html
@@ -132,23 +132,29 @@
 
 
 
-<div class="12u"><section>
-
-<strong><h4>Project WiSh:  Towards a Wireless Shape-aware World </h4></strong><br />
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project WiSh:  Towards a Wireless Shape-aware World </h4></strong><br />
 <table>
 <tr>
 <td>
 <div style="padding:10px;border-width:2px;border-style:solid">
-<img src="images/wish.png" style="width:300px"/>
+<img src="images/wish.png" style="width:100%"/>
 </div>
 </td>
+</tr>
+<tr>
 <td style="width:10px">
+<br />
 </td>
+</tr><tr>
 <td style="vertical-align:middle">
 WiSh gives ordinary objects shape-awareness, relaying their geometry by combining wireless sensing with graphics. It opens up novel applications: clothing that can detect a user's posture, or even bridges that report their structural health.
 </td>
 </tr>
-</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+</table>
+</section>
+</div>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>WiSh: Towards a Wireless Shape-aware World </strong>, Haojian Jin, Jingxian Wang, Zhijian Yang, Swarun Kumar, Jason Hong, MobiSys  2018 [<a href="papers/wish-mobisys2018.pdf">PAPER</a>]<br />
 </li>
